welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: not found: value getWordHeight
      for(n<-1 to getWordHeight()){
                  ^